# ligo

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .ligoproject  .ocamlformat  .ocamlformat-ignore  .xrefcheck.yaml  0001-Nairobi-JSOO-Gas-free.patch  0001-Removes-problematic-sh-script-on-macos.patch  0002-JSOO-Use-lib_hacl-compatible-with-hacl-star-0.4.1.patch  001-tezos-deps-via-esy.patch  AST.ml  AST.mli  AST2.ml  CHANGELOG.md  Dockerfile  Dockerfile.ubuntu  EvalOpt.ml  EvalOpt.mli  INSTALL.md  LexToken.mli  LexToken.mll  Lexer.mll  LexerMain.ml  Makefile  ParToken.mly  Parser.mly  ParserMain.ml  Pos.ml  Print.ml  Print.mli  Region.mli  TODO  Typecheck2.ml  Typecheck2.mli  Utils.ml  Version.ml  (+28 more)
lib/ligo_lexer_lib/: CLI.ml  Client.mli  Core.mli  Core.mll  LexCore.mli  LexCore.mll  LexError.ml  LexError.mli  LowAPI.ml  LowAPI.mli  Markup.mli  Options.mli  README.md  State.ml  State.mli  Thread.mli  Unit.ml  dune
lib/ligo_preprocessor/: CLI.ml  CLI.mli  Directive.mli  Directive.mll  E_AST.ml  E_Lexer.mll  E_LexerMain.ml  Env.ml  LowAPI.mli  LowAPI.mll  ModRes.ml  Options.ml  Options.mli  PreError.ml  README.md  State.ml  State.mli  Status.mli  TopAPI.ml  TopAPI.mli  dune
lib/tree_sitter/: api_funcs_desc.ml  api_types_desc.ml  dune
lib/tree_sitter_typescript/: api_funcs_desc.ml  api_types_desc.ml  dune
proto-alpha-utils/: proto-alpha-utils.opam  x_error_monad.ml
src/: .ocamlformat  README.md  README_INSTALL  build-deps.sh  build.sh  dune  install.sh  ligo.opam  ppx_let.ml
src/api_helpers/: dune
src/ast_simplified/: PP.ml  ast_simplified.ml  combinators.ml  dune  misc.ml  types.ml
src/ast_typed/: PP.ml  ast_typed.ml  combinators.ml  dune  environment.ml  misc.ml  misc_smart.ml  types.ml
src/cameligo2/: caml_core.ml  dune  from_ocaml.ml  test.ml  var_solving.ml
src/compiler/: compiler_environment.ml  compiler_program.ml  compiler_type.ml  dune  uncompiler.ml
src/contracts/: amount.mligo  annotation.ligo  big_map.ligo  bitwise_arithmetic.ligo  closure-2.ligo  closure-3.ligo  closure.ligo  coase.ligo  condition.ligo  counter.mligo  declaration-local.ligo  declarations.ligo  dispatch-counter.ligo  failwith.mligo  fibo.mligo  included.ligo  incr_decr.mligo  lambda.mligo  lambda2.mligo  letin.mligo  list.ligo  loop.ligo  map.ligo  match.ligo  new-syntax.mligo  procedure.ligo  set_arithmetic-1.ligo  set_arithmetic.ligo  string_arithmetic.ligo  super-counter.mligo  vote.mligo  website1.ligo  website2.ligo
src/coq/: .gitignore  Makefile  README.md  _CoqProject  bytes.v  co_de_bruijn.v  compiler.v  dune  lemmas.v  ligo.v  micheline.v  michelson.v  ope.v  types.v
src/coq_ocaml/: BinPos.ml  compiler.ml  compiler.mli  dune  extraction.v  ligo.ml  ligo.mli  micheline_wrapper.ml
src/environment/: bool.ml  dune  environment.ml  environment.mli  protocols.ml
src/formatter/: dune  ligo_formatter.ml
src/init/: dune  ligo_init.ml
src/lib_memory_protocol_alpha/: memory_proto_alpha.ml  tezos-memory-proto-alpha.opam
src/lib_micheline/: michelson_primitives.ml
src/lib_protocol_environment/: tezos_protocol_environment.mli
src/lib_utils/: .gitignore  PP.ml  cast.ml  dictionary.ml  dune  environment.ml  function.ml  init_proto_alpha.ml  location.ml  tezos-utils.opam  tezos_utils.ml  trace.ml  tree.ml  tuple.ml  x_error_monad.ml  x_list.ml  x_memory_proto_alpha.ml  x_option.ml  x_tezos_micheline.ml
src/ligo/: .old.transpiler.ml  README_INSTALL  TODO.txt  ast_simplified.ml  ast_typed.ml  dune  lexer.mll  ligo.ml  ligo.opam  main.ml  mini_c.ml  operators.ml  parser.ml  parser.mly  rope_test.ml  simplify.ml  simplify_mixfix.ml  simplify_multifix.ml  transpiler.ml  type_ast.ml  typer.ml
src/ligo/run/: dune  (+1 more)
src/main/: contract.ml  display.ml  display.mli  dune  main.ml  run_mini_c.ml  run_simplified.ml  run_source.ml  run_typed.ml
src/meta_michelson/: alpha_wrap.ml  contract.ml  dune  misc.ml
src/mini_c/: PP.ml  combinators.ml  combinators_smart.ml  dune  environment.ml  types.ml
src/operators/: dune  helpers.ml  operators.ml
src/package-management/: alpha.ml  alpha.mli  dune  package_management.ml  publish.ml  publish.mli  unpublish.ml  unpublish.mli  utils.ml
src/parser/: dune  ligodity.ml  parser.ml
src/ppx/: dune  ppx_poly_constructor.ml
src/ppx_let/: CREDITS
src/rope/: rope_test.mli
src/simplify/: camligo.ml  camligo.ml.old  dune  ligodity.ml  pascaligo.ml  simplify.ml
src/test/: #multisig_tests.ml#  #test.ml#  .#test.ml  analytics_tests.ml  ast_production.ml  basic_multisig_tests.ml  bin_tests.ml  coase_tests.ml  compiler_tests.ml  contract_test.ml  db_index_assignment_tests.ml  db_index_by_constraint_identifier_tests.ml  db_index_cycle_detection_topological_sort_tests.ml  db_index_grouped_by_variable_tests.ml  db_index_tests.ml  db_index_tests_common.ml  db_index_typeclasses_constraining_tests.ml  decompiler_tests.ml  doc_test.ml  dune  get_scope_tests.ml  hash_lock_tests.ml  hash_lock_tests_p.ml  hash_lock_tests_re.ml  heap_tests.ml  heuristic_access_label_tests.ml  heuristic_break_ctor_tests.ml  heuristic_common.ml  heuristic_specialize1_tests.ml  heuristic_tc_fundep_tests.ml  heuristic_tc_fundep_tests_compare_cleaned.ml  id_tests.ml  id_tests_p.ml  id_tests_r.ml  integration_tests.ml  ligo_init_tests.ml  ligo_install_slow_tests.ml  ligo_install_tests.ml  lsp_test.ml  manual_test.ml  (+28 more)
src/transpiler/: transpiler.ml
src/typer/: typer.ml
src/typesystem/: core.ml  dune  misc.ml  shorthands.ml  typesystem.ml
src/union_find/: Partition.mli  Partition0.ml  Partition1.ml  Partition2.ml  Partition3.ml  PartitionMain.ml  dune
tezos-utils/michelson-parser/: dune  michelson-parser.opam
vendored-dune/ParserLib/: CLI.ml  LowAPI.ml  LowAPI.mli  Options.ml  Options.mli  ParserLib.opam  dune
vendored-dune/Preprocessor/: CLI.ml  Directive.mli  Directive.mll  E_AST.ml  E_Parser.mly  Error.ml  LowAPI.mli  LowAPI.mll  ModRes.ml  ModRes.mli  Options.ml  Options.mli  Preprocessor.opam  README.md  TopAPI.ml  TopAPI.mli  dune
vendored-dune/prometheus_format/: dune  dune-project  prometheus_format.ml  prometheus_format.mli  (+1 more)
(+11138 files in other folders)
