(env
 (dev
  (flags (:standard
   -w @1..3@5..28@30..39@43@46..47@49..57@61..62-40 
   -strict-sequence 
   -strict-formats 
   -short-paths 
   -keep-locs
   -open Core
   )))
 (release
  (flags (:standard 
   -O3
   -strict-sequence 
   -strict-formats 
   -short-paths 
   -keep-locs
   -open Core
   )))
 (static
  (flags (:standard 
   -strict-sequence 
   -strict-formats 
   -short-paths 
   -keep-locs
   -open Core
   )))
)

(vendored_dirs vendors)
