(library
 (name ligo_unix)
 (modules ligo_unix)
 (flags (:standard))
 (libraries unix)
 (public_name ligo.unix))

(vendored_dirs vendored-dune vendors)

(env
 (_
  (js_of_ocaml
   (compilation_mode whole_program)
   (flags
    (:standard --enable effects))
   (build_runtime_flags
    (:standard --enable effects)))))

(dirs :standard \ jsoo)
