name: "ligo"
opam-version: "2.0"
maintainer: "Galfour <contact@ligolang.org>"
authors: [ "Galfour" ]
homepage: "https://gitlab.com/ligolang/tezos"
bug-reports: "https://gitlab.com/ligolang/tezos/issues"
synopsis: "A high-level language which compiles to Michelson"
dev-repo: "git+https://gitlab.com/ligolang/tezos.git"
license: "MIT"
# If you change the dependencies, run `opam lock` in the root
depends: [
  # Jane Street Core
  "core" {= "v0.14.1"}
  # Tooling
  "odoc" { build }
  "ocamlfind" { build }
  "dune" { build & >= "2.7.1" }
  "alcotest" { with-test }
  # Pipelinye
  "ocamlgraph"
  "menhir" { = "20211128" }
  "coq" { build & >= "8.12" & < "8.14" }
  # I/O
  "bos"
  "getopt"
  "tezos-clic"
  "qcheck"
  "terminal_size"
  "pprint"
  "yojson"
  "ocaml-recovery-parser" { = "0.2.4" }
  "semver"
  "tls"
  "decompress"
  "tar"
  "tar-unix"
  "lambda-term"
  "parse-argv"
  # Tezos libs
  "tezos-base"
  "tezos-crypto"
  "tezos-micheline"
  # PPXs
  "ppx_deriving"
  "ppx_deriving_yojson"
  "ppx_expect"
  "ppx_import"
  "ppx_inline_test"
  # work around tezos' failure to constrain
  "lwt" { = "5.5.0" }
  "bisect_ppx" {>= "2.3"}
  "irmin"
  "cmdliner" {= "1.1.0"}
  # work around upstream in-place update
  "ocaml-migrate-parsetree" { = "2.3.0" }
  # dependencies of vendored dependencies
  "bls12-381"
  "alcotest-lwt"
  "qcheck-alcotest"
  "irmin-pack"
  "ringo-lwt"
  "pure-splitmix"
  "resto-cohttp-self-serving-client"
  "tezos-rust-libs"
  "crunch"
  "class_group_vdf"
  "tezos-plonk"
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
pin-depends: [
  [ "tezos-014-PtKathma-test-helpers.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-base.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-clic.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-client-014-PtKathma.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-client-base.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-client-base-unix.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-client-commands.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-context.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-crypto.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-error-monad.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-event-logging.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-hacl.dev" "./vendors/tezos-ligo/opam"]
  [ "tezos-lwt-result-stdlib.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-micheline.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-mockup.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-mockup-commands.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-mockup-proxy.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-mockup-registration.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-p2p.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-p2p-services.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-protocol-014-PtKathma.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-protocol-compiler.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-protocol-environment.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-protocol-plugin-014-PtKathma.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-proxy.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-rpc.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-rpc-http.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-rpc-http-client.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-rpc-http-client-unix.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-sapling.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-shell-services.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-signer-backends.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-signer-services.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-stdlib.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-stdlib-unix.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-test-helpers.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-version.dev" "./vendors/tezos-ligo/opam" ]
  [ "tezos-workers.dev" "./vendors/tezos-ligo/opam" ]
  [ "ocaml-recovery-parser.0.2.4" "git+https://github.com/serokell/ocaml-recovery-parser.git#0.2.4" ]
]
