name         : "ligo"
opam-version : "2.0"
maintainer   : "Galfour <contact@ligolang.org>"
authors      : [ "Gabriel Alfour" "Christian Rinderknecht"]
homepage     : "https://gitlab.com/ligolang/tezos"
bug-reports  : "https://gitlab.com/ligolang/tezos/issues"
synopsis     : "A high-level language which compiles to Michelson"
dev-repo     : "git+https://gitlab.com/ligolang/tezos.git"
license      : "MIT"

# If you change the dependencies, run `opam lock` in the root
depends: [
  # Jane Street Core
  "core" {>= "v0.15.0" & < "v0.16.0"}
  "core_kernel" { >= "v0.15.0" & < "v0.16.0"}
  # Tooling
  "odoc" { build }
  "ocamlfind" { build }
  "dune" { build & >= "3.6.1" }
  "alcotest" { with-test }
  # Pipelinye
  "ocamlgraph"
  "menhir" { = "20230608" }
  "coq" { build & >= "8.12" & < "8.14" }
  # I/O
  "bos"
  "qcheck"
  "terminal_size"
  "pprint"
  "yojson"
  "ocaml-recovery-parser" { = "0.2.4" }
  "semver"
  "uri"
  "tls"
  "decompress"
  "tar"
  "tar-unix"
  "lambda-term"
  "parse-argv"
  "msgpck"
  # PPXs
  "ppx_deriving"
  "ppx_deriving_yojson"
  "ppx_yojson_conv"
  "ppx_expect"
  "ppx_import"
  "ppx_inline_test"
  # Analytics
  "asetmap" {= "0.8.1"}
  "prometheus" {>= "1.2"}
  # work around tezos' failure to constrain
  "lwt" {= "5.6.1"}
  "bisect_ppx" {>= "2.3"}
  "irmin"
  "cmdliner" {= "1.1.0"}
  "ocaml-compiler-libs"
  "simple-diff"
  "stdint"
  # work around upstream in-place update
  "ocaml-migrate-parsetree" { = "2.3.0" }
  # dependencies of vendored dependencies
  "alcotest-lwt"
  "qcheck-alcotest"
  "irmin-pack"
  "pure-splitmix"
  "cohttp-server-lwt-unix"
  "resto-cohttp-self-serving-client"
  "tezos-rust-libs"
  "crunch"
  "class_group_vdf"
  "data-encoding" { >= "0.7.1" & < "1.0.0" }
  "hex"
  "lwt-canceler"
  "seqes"
  "ctypes_stubs_js"
  "hacl-star-raw"
  "hacl-star"
  "secp256k1-internal"
  "mtime" { >= "1.4.0" & < "2.0.0" }
  "zarith" { >= "1.12" & < "1.13" }
  # dev dependencies (not labels as { dev } since this feature doesn't work
  # currently https://github.com/ocaml/opam/issues/5177).
  # Also sticking to 0.21.0 for ocamlformat since ocamlformat-rpc doesn't have a
  # 0.24.1 release
  "ocamlformat" { = "0.21.0" }
  "ocamlformat-rpc" { = "0.21.0" }
  "ocaml-lsp-server" { >= "1.14.0" }
  # dependencies for ligo lsp (OCaml implementation)
  "lsp" { = "1.14.2" }
  "linol" { = "0.4" }
  "linol-lwt" { = "0.4" }
  "aches-lwt"
  # Networking
  "conduit" {= "6.1.0"}
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
pin-depends: [
  [ "ocaml-recovery-parser.0.2.4" "git+https://github.com/serokell/ocaml-recovery-parser.git#0.2.4" ]
  [ "linol.0.4" "git+https://github.com/c-cube/linol.git#09311ae258c55c53c62cb5eda3641682e61fe191" ]
  [ "linol-lwt.0.4" "git+https://github.com/c-cube/linol.git#09311ae258c55c53c62cb5eda3641682e61fe191" ]
]
