;; A UTF8-aware lexer library

(ocamllex LexCore)

(library
 (name LexerLib)
 (public_name ligo.lexer_lib)
 (modules
  Client
  Status
  Options
  CLI
  LowAPI
  LexCore
  Unit
  Error
  Thread
  State
  Markup
  Version)
 (modules_without_implementation Status Client)
 (private_modules LexCore Error Version)
 (libraries
  ;; Vendor
  simple-utils
  Preprocessor
  GetoptLib
  ;; Third party
  uutf)
 (flags
  (:standard -open Core)))

;; Build of the version source (for the user, as a CLI option)

(rule
 (targets version.ml)
 (action
  (with-stdout-to
   version.ml
   (run "sh" "-c" "printf 'let version = \"%s\"' \"${LIGO_VERSION}\""))))
