(library
 (name cameligo2)
 (modules
  (:standard \ Test))
 (libraries ast_core checking main_errors ocaml-compiler-libs.common))

(executable
 (name test)
 (modules Test)
 (libraries cameligo2)
 (preprocess
  (pps ppxlib.metaquot)))

(rule
 (alias runtest)
 (deps
  (:exe ./test.exe))
 (action
  (run %{exe})))
