(library
  (name compiler)
  (public_name ligo.compiler)
  (libraries
    simple-utils
    tezos-utils
    meta_michelson
    mini_c
    operators
  )
  (preprocess
    (pps simple-utils.ppx_let_generalized)
  )
  (flags (:standard -w +1..62-4-9-44-40-42-48-30@39@33 -open Simple_utils -open Tezos_utils ))
)
