(library
 (name ligo_coq_ocaml)
 (public_name ligo.coq_ocaml)
 (flags
  (:standard \ -open Core)
  -w
  "-33-39")
 (libraries core zarith octez-libs.tezos-micheline sexplib)
 (preprocess
  (pps ppx_sexp_conv)))

(coq.extraction
 (prelude extraction)
 (extracted_modules
  ;; Coq stuff (hmm)
  Datatypes
  Bool
  Nat
  PeanoNat
  List
  Specif
  ;; LIGO /src/coq stuff
  ope
  compiler)
 (theories ligo_coq)
 (plugins zarith))
