opam-version: "2.0"
name: "tezos-utils"
version: "1.0"
synopsis: "Tezos Utilities defined in the Tezos repository, to be used by other libraries"
maintainer: "Galfour <gabriel.alfour@gmail.com>"
authors: "Galfour <gabriel.alfour@gmail.com>"
license: "MIT"
homepage: "https://gitlab.com/gabriel.alfour/tezos-utils"
bug-reports: "https://gitlab.com/gabriel.alfour/tezos-utils/issues"
depends: [
  "dune"
  "base"
  "base"
  "bigstring"
  "calendar"
  "cohttp-lwt-unix"
  "cstruct"
  "ezjsonm"
  "hex"
  "hidapi"
  "ipaddr"
  "irmin"
  "js_of_ocaml"
  "lwt"
  "lwt_log"
  "mtime"
  "ocplib-endian"
  "ocp-ocamlres"
  "re"
  "rresult"
  "stdio"
  "uri"
  "uutf"
  "zarith"
  "ocplib-json-typed"
  "ocplib-json-typed-bson"
  "tezos-crypto"
  "tezos-stdlib-unix"
  "tezos-data-encoding"
  "tezos-protocol-environment"
  "tezos-protocol-alpha"
  "michelson-parser"
]
build: [
  ["dune" "build" "-p" name]
]
dev-repo: "git+https://gitlab.com/gabriel.alfour/tezos-utils"
url {
  src: "https://gitlab.com/gabriel.alfour/tezos-utils/-/archive/master/tezos-utils-master.tar.gz"
}
