(library
  (name ligo)
  (public_name ligo)
  (libraries
    tezos-utils
    tezos-micheline
    meta-michelson
    ligo_helpers
    ligo_parser
    multifix
  )
  (preprocess
    (pps ppx_let)
  )
  (flags (:standard -w +1..62-4-9-44-40-42-48@39@33 ))
)

(alias
  (name runtest)
  (action (run test/test.exe))
  (deps (glob_files contracts/*))
)
