(env
  (dev
    (flags (:standard -w +1..62-4-9-44-40-42-48@39@33 -open Tezos_utils ))
  )
  (release
    (flags (:standard -w +1..62-4-9-44-40-42-48@39@33 -open Tezos_utils ))
  )
)

(library
  (name ligo)
  (public_name ligo)
  (libraries
    tezos-utils
    tezos-micheline
    meta_michelson
    ligo_parser
    mini_c
    multifix
  )
  (preprocess
    (pps ppx_let)
  )
)

(alias
  (name ligo-test)
  (action (run test/test.exe))
  (deps (glob_files contracts/*))
)

(alias
  (name runtest)
  (deps ligo-test)
)
