(library
  (name simplify)
  (public_name ligo.simplify)
  (libraries
    simple-utils
    tezos-utils
    parser
    ast_simplified
    operators)
  (modules ligodity pascaligo simplify)
  (preprocess
    (pps
      simple-utils.ppx_let_generalized
    )
  )
  (flags (:standard -w +1..62-4-9-44-40-42-48-30@39@33 -open Simple_utils ))
)
