(ocamllex md)

(executables
  (names test doc_test parser_negative_tests)
  (libraries
    simple-utils
    ligo
    alcotest
    tezos-utils
    tezos-crypto
  )
  (preprocess
    (pps ppx_let)
  )
  (flags (:standard -w +1..62-4-9-44-40-42-48@39@33 -open Simple_utils ))
)

(alias
  (name doc-test)
  (action (run ./doc_test.exe))
  (deps (source_tree ../../gitlab-pages/docs))
)

(alias
  (name parser-negative-tests)
  (action (run ./parser_negative_tests.exe))
  (deps
    ../passes/01-parsing/pascaligo/all.ligo
    ../passes/01-parsing/cameligo/all.mligo
    ../passes/01-parsing/reasonligo/all.religo
  ))

(alias
  (name ligo-test)
  (action (setenv POSITIVE_CONTRACTS "%{pos}"
           (run ./test.exe)))
  (deps (glob_files contracts/*)
        (:pos (glob_files contracts/positive/*))
        (glob_files contracts/negative/*))
)

(alias
  (name runtest)
  (deps (alias ligo-test) (alias doc-test) (alias parser-negative-tests))
)

(alias
  (name manual-test)
  (action (run ./manual_test.exe))
  (deps (glob_files contracts/*))
)
