(ocamllex md)

(executables
 (names
  test
  doc_test
  repl_test
  vendors_test
  contract_test
  get_scope_tests
  pretty_printer_tests
  lsp_test
  decompiler_tests)
 (libraries
  simple-utils
  simple-utils-unix
  simple-utils-unix.http_uri
  tezos-memory-proto-alpha
  ligo.main_interpreter
  ligo.api
  ligo_init
  ligo
  ligo.unix
  bos
  repl
  interpreter
  alcotest
  tezos-utils
  tezos-crypto
  ligo_api
  cli
  prometheus
  prometheus_format
  prometheus_push
  lsp_test_requests))

(rule
 (alias doc-test)
 (action
  (run ./doc_test.exe))
 (deps
  (source_tree ../../gitlab-pages/docs)))

(rule
 (alias md_update)
 (action
  (run echo ".md files pushed in _build"))
 (deps
  (source_tree ../../gitlab-pages/docs)))

(rule
 (alias repl-test)
 (action
  (run ./repl_test.exe))
 (deps
  (source_tree ../../gitlab-pages/docs)
  (source_tree projects)))

(rule
 (alias ligo-test)
 (action
  (run ./test.exe))
 (deps
  (glob_files contracts/*)
  (glob_files contracts/deep_pattern_matching/*)
  (glob_files contracts/vars_consts/*)
  (glob_files contracts/positive/*)
  (glob_files contracts/negative/*)
  (glob_files preprocessor/*)))

(rule
 (alias vendors_test)
 (action
  (run ./vendors_test.exe))
 (deps
  (source_tree projects)))

(rule
 (alias contract_test)
 (action
  (setenv
   POSITIVE_CONTRACTS
   "%{pos}"
   (run ./contract_test.exe)))
 (deps
  (glob_files contracts/*)
  (:pos
   (glob_files contracts/positive/*))
  (glob_files contracts/negative/*)
  (glob_files preprocessor/*)))

(rule
 (alias get_scope_tests)
 (enabled_if
  (<> %{ocaml-config:system} mingw64))
 (deps
  (:schema ../main/scopes/schema.json)
  (glob_files contracts/*)
  (glob_files contracts/negative/*)
  (glob_files error-recovery/simple/cameligo/*.mligo)
  (glob_files error-recovery/simple/cameligo/original/*.mligo)
  (glob_files error-recovery/simple/jsligo/*.jsligo)
  (glob_files error-recovery/simple/jsligo/original/*.jsligo)
  (glob_files error-recovery/multiple_errors/*))
 (action
  (run ./get_scope_tests.exe -q -c)))

(rule
 (alias get_scope_tests_all)
 (deps
  (:schema ../main/scopes/schema.json)
  (glob_files contracts/*)
  (glob_files contracts/negative/*)
  (glob_files error-recovery/simple/cameligo/*.mligo)
  (glob_files error-recovery/simple/cameligo/original/*.mligo)
  (glob_files error-recovery/simple/jsligo/*.jsligo)
  (glob_files error-recovery/simple/jsligo/original/*.jsligo)
  (glob_files error-recovery/multiple_errors/*))
 (action
  (run ./get_scope_tests.exe -c)))

(alias
 (name runtest)
 (deps
  (alias vendors_test)
  (alias ligo-test)
  (alias doc-test)
  ;;  (alias parser-negative-tests)
  (alias repl-test)
  (alias contract_test)
  (alias error-recovery/recovery-test)
  (alias get_scope_tests)
  (alias decompiler_tests)
  (alias pretty-printer-tests)
  (alias lsp-test)))

(rule
 (alias manual-test)
 (action
  (run ./manual_test.exe))
 (deps
  (glob_files contracts/*)))

(rule
 (alias decompiler_tests)
 (action
  (run ./decompiler_tests.exe))
 (deps
  (glob_files contracts/*)))

(rule
 (alias pretty-printer-tests)
 (action
  (run ./pretty_printer_tests.exe))
 (deps
  (source_tree contracts)))

(rule
 (alias lsp-test)
 (action
  (run ./lsp_test.exe))
 (deps
  (source_tree contracts)))
