name: "michelson-parser"
opam-version: "2.0"
maintainer: "gabriel.alfour@gmail.com"
authors: [ "Galfour" ]
homepage: "https://gitlab.com/gabriel.alfour/tezos"
bug-reports: "https://gitlab.com/gabriel.alfour/tezos/issues"
dev-repo: "git+https://gitlab.com/gabriel.alfour/tezos.git"
license: "MIT"
depends: [
  "ocamlfind" { build }
  "dune"
  "tezos-memory-proto-alpha"
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
