;; Build of a parser library

(library
  (name ParserLib)
  (public_name ParserLib)
  (modules
     Options Status CLI LowAPI Version)
  (modules_without_implementation
     Status)
  (libraries
    ;; Vendors
    simple-utils
    Preprocessor
    LexerLib
    GetoptLib
    ocaml-recovery-parser
    ;; Third party
    menhirLib)
  (flags (:standard -open Core)))

;; Build of the version source (for the user, as a CLI option)

(rule
 (targets Version.ml)
 (action (with-stdout-to
          Version.ml
          (run "sh" "-c"
               "printf 'let version = \"%s\"' \"${LIGO_VERSION}\""))))
